2004-07-29 Gareth Jones <gareth_jones@users.berlios.de>

	* src/libprometheus.bash.in (add_profile): Call error instead of
	  failure if profile not found.

	* All files: Changed Gareth Jones' email address to
	  <gareth_jones@users.berlios.de>.

2004-07-24 Gareth Jones <gareth_jones@users.berlios.de>

	* src/libprometheus.bash.in: Added setup_logging, called from
	  open_package.
	* etc/prometheus.conf.in: Added terminal_output.
	* etc/REFERENCE.pkg: Added terminal_output.

	* src/pkgunpack.in: Added option parsing loop & recursive calling.

2004-07-23 Gareth Jones <gareth_jones@users.berlios.de>

	* src/pkgbuild.in: Added usage.

	* src/pkgunpack.in: Touched.
	* man/pkgunpack.1.in: Touched.
	* Makefile.defs: Reference to pkgunpack added.

	* src/libprometheus.bash.in: Sectioned into function groups.  Restored
	  is_set, is_func, override_var, override_array, override_func,
	  stage_overrides, set_directory (formerly pkgdir), prepare_build_env
	  & open_package.

	* etc/prometheus.conf.in: Added logfile (replaces log_build) & check.
	* etc/REFERENCE.pkg: Restored.  Changed dep variable into deps array.
	  Added logfile, check & check_pkg.

2004-07-21 Gareth Jones <gareth_jones@users.berlios.de>

	* src/libprometheus.bash.in: Added terminated function & trap for
	  SIGHUP, SIGINT & SIGQUIT.

2004-07-20 Gareth Jones <gareth_jones@users.berlios.de>

	* Makefile: Added GPL notice.
	* etc/Makefile: Added GPL notice.
	* man/Makefile: Added GPL notice.
	* profiles/Makefile: Added GPL notice.
	* src/Makefile: Added GPL notice.
	* src/compact.in: Added GPL notice.
	* src/pkgadd.in: Added GPL notice.
	* src/pkgbuild.in: Added GPL notice.
	* src/pkgcheck.in: Added GPL notice.
	* src/pkgget.in: Added GPL notice.
	* src/pkginfo.in: Added GPL notice.
	* src/pkginstall.in: Added GPL notice.
	* src/pkgrm.in: Added GPL notice.
	* src/libprometheus.bash.in: Added GPL notice, also added brief note to
	  version function output.
	* x86stepping/Makefile: Added GPL notice.